pa.yaml
apiVersion: "security.istio.io/v1beta1"
kind: "PeerAuthentication"
metadata:
  name: "mtls-strict-policy"
spec:
  mtls:
    mode: STRICT
